fix overflow

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 }
 
 section {
+  overflow-y: auto;
   padding: 1em;
   background: rgba(0, 0, 0, 0.5);
 }
